# template-workflow-basic-ui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-check.yml
src/app/: workflow.py
src/quick_start/: workflow.py
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/pages/: Confetti.tsx  Home.tsx
