[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "llama-index-workflows[server]>=2.2.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.llamadeploy.ui]
directory = "./ui"

[tool.llamadeploy]
env-files = [".env"]

[tool.llamadeploy.workflows]
default = "app.workflow:workflow"
